--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -39,7 +39,7 @@ $title-font: 'Rubik-Regular', sans-serif;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: rgb(10, 10, 10);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
