--- a/source/style/sections/header.scss
+++ b/source/style/sections/header.scss
@@ -7,15 +7,71 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 75px;
     z-index: 999;
 
+    border-bottom: 1px solid grey;
+
+    @include phones {
+        height: 60px;
+    }
+
+    &__socials {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 40px;
+      display: flex;
+
+      @include phones {
+        right: 10px;
+      }
+    }
+
+    &__icon {
+      display: flex;
+      border: 1px solid white;
+      color: white;
+      width: 40px;
+      height: 40px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      font-size: 20px;
+      transition: all .3s ease;
+
+      &:hover {
+        background-color: #fff;
+        color: #000;
+      }
+        @include phones {
+          width: 25px;
+          height: 25px;
+          font-size: 14px;
+        }
+    }
+
+    &__icon + &__icon{
+        margin-left: 20px;
+        @include phones {
+          margin-left: 10px;
+        }
+    }
+
     &__title {
-        font-size: 22px;
+        font-size: 24px;
         color: white;
         font-family: 'light';
         text-align: center;
         letter-spacing: 10px;
+
+        a {
+          color: inherit;
+        }
+
+        @include phones {
+          font-size: 20px;
+      }
     }
 }
 
