--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -4,10 +4,14 @@ html(lang='ru')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
+    link(rel="shortcut icon" href="favicon.ico" type="image/x-icon")
+    link(rel="icon" href="favicon.ico" type="image/x-icon")
     title В•Д•П•Й
     link(rel='stylesheet' href='assets/css/foundation.css')
+    link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous")
     link(rel='stylesheet' href='assets/css/app.css')
     script(src='assets/js/foundation.js' defer)
+    
   body
     block content       
 
